--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,27 @@
 :root {
-  --primary-color: #000;
-  --secondary-color: #fff;
-  --third-color: #161616;
-  --fourth-color: #262626;
+  --background-color: #000;
+  --nav-color: #161616;
+  --project-card-bg: #fff;
+  --text-color: #fff;
+  --secondary-color: #003893;
+  --form-color: #262626;
 }
 
-.light-theme {
-  --primary-color: #fff;
-  --secondary-color: #000;
-  --third-color: #e7e7e7;
-  --fourth-color: #e7e7e7;
+[data-theme="light"] {
+  --background-color: #fff;
+  --nav-color: #e7e7e7;
+  --project-card-bg: #ffffff00;
+  --text-color: #000;
+  --secondary-color: #003893;
+  --form-color: #e7e7e7;
 }
 
 body {
-  background: var(--primary-color) no-repeat;
+  background: var(--background-color) no-repeat;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto 60px;
 }
 
 * {
@@ -22,6 +29,12 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
 }
 
 html {
