--- a/src/sections/About Me/AboutStyles.css
+++ b/src/sections/About Me/AboutStyles.css
@@ -12,8 +12,9 @@
 .heading {
   margin: 0px;
   margin-bottom: 50px;
-  color: var(--text-color);
+  color: var(--secondary-color);
   font-size: 40px;
+  font-weight: 550;
 }
 
 .desc {
