--- a/src/sections/Contact/ContactStyles.css
+++ b/src/sections/Contact/ContactStyles.css
@@ -1,12 +1,3 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: verdana;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
-
 #contact {
   padding: 0;
   margin: 200px auto;
@@ -26,8 +17,9 @@ body {
 }
 
 .sub-title {
-  color: var(--text-color);
+  color: var(--secondary-color);
   font-size: 40px;
+  font-weight: 550;
   text-align: center;
   margin-bottom: 50px;
   margin-top: 0;
