--- a/src/sections/Navigation Bar/NavStyles.css
+++ b/src/sections/Navigation Bar/NavStyles.css
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  background-color: var(--nav-color);
 }
 
 .title {
@@ -49,8 +50,8 @@
 /* Theme icon styles */
 #theme-icon {
   position: absolute;
-  top: 25px;
-  margin-left: 50px;
+  top: 30px;
+  margin-left: 500px;
   width: 30px;
   cursor: pointer;
 }
