--- a/src/sections/Resume/SkillsStyles.css
+++ b/src/sections/Resume/SkillsStyles.css
@@ -8,7 +8,7 @@
 
 .dev-icons {
   list-style: none;
-  font-size: 3rem;
+  font-size: 5rem;
   margin-bottom: 0px;
   margin-top: 0px;
   padding-left: 0px;
@@ -19,6 +19,10 @@
   display: inline-block;
   margin-bottom: 20px;
   margin-right: 20px;
+}
+
+.software-skill-inline i:hover {
+  color: var(--secondary-color);
 }
 
 .software-skill-inline i {
@@ -35,7 +39,7 @@
 
 .software-skill-inline p {
   color: rgb(134, 142, 150);
-  font-size: 10px;
+  font-size: 20px;
 }
 
 html {
