styling, responsiveness, menu bar added

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@
   --nav-color: #e7e7e7;
   --project-card-bg: #e7e7e7;
   --text-color: #000;
-  --secondary-color: #003893;
+  --secondary-color: #0d92ff;
   --form-color: #e7e7e7;
-  --card-color: #08112b;
+  --card-color: #0d92ff;
 }
 
 body {
