--- a/src/sections/Hero/HeroStyles.css
+++ b/src/sections/Hero/HeroStyles.css
@@ -1,17 +1,3 @@
-/* Global styles */
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: verdana;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
-
-body {
-  background-size: cover;
-}
-
 /* Main styles */
 main {
   margin: 0;
@@ -46,7 +32,7 @@ section.info {
   border-radius: 50%;
   border: 6px solid var(--secondary-color);
   width: 80%;
-  max-width: 250px;
+  max-width: 270px;
   object-fit: cover;
   box-shadow: var(--secondary-color) 0px 0px 90px;
 }
@@ -86,6 +72,12 @@ section.info {
   color: var(--secondary-color);
 }
 
+@media (max-width: 768px) {
+  .description .about {
+    margin: 0 50px;
+  }
+}
+
 @media (min-width: 768px) {
   .description .hi {
     font-size: 2rem;
@@ -102,6 +94,12 @@ section.info {
   padding-top: 2rem;
   display: flex;
   justify-content: center;
+  transition: transform 0.5s;
+}
+
+.hero-icons a:hover {
+  color: var(--secondary-color);
+  transform: translateY(-5px);
 }
 
 @media (min-width: 768px) {
