--- a/src/sections/Navigation Bar/NavStyles.css
+++ b/src/sections/Navigation Bar/NavStyles.css
@@ -10,6 +10,7 @@
   align-items: center;
   z-index: 100;
   background-color: var(--nav-color);
+  opacity: 0.95;
 }
 
 .title {
@@ -19,39 +20,105 @@
   text-decoration: none;
 }
 
-.navbar a {
-  position: relative;
-  font-size: 18px;
-  color: var(--text-color);
-  font-weight: 500;
+nav ul {
+  display: flex;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul li a {
+  display: block;
   text-decoration: none;
-  margin-left: 40px;
+  color: var(--text-color);
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
 }
 
-.navbar a:last-child {
-  margin-right: 0; /* Remove right margin from the last item */
+nav ul li a:hover {
+  color: white;
 }
 
-.navbar a::before {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background-color: var(--text-color);
-  transition: 0.4s;
+nav ul li a:not(.active):hover {
+  background-color: var(--secondary-color);
 }
 
-.navbar a:hover::before {
-  width: 100%;
-}
-
-/* Theme icon styles */
 #theme-icon {
-  position: absolute;
-  top: 25px;
-  margin-left: 30px;
+  margin-left: 20px;
   width: 30px;
   cursor: pointer;
+}
+
+nav .menu {
+  display: none;
+  position: absolute;
+  top: 0.75rem;
+  right: 0.5rem;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 2.25rem;
+  height: 1.8rem;
+  color: var(--text-color);
+}
+
+nav .menu span {
+  height: 0.275rem;
+  width: %;
+  background-color: var(--text-color);
+  border-radius: 0.2rem;
+}
+
+@media (min-width: 900px) {
+  #theme-icon {
+    position: absolute;
+    top: 1.75rem;
+  }
+}
+
+@media (max-width: 900px) {
+  nav .menu {
+    display: flex;
+    right: 2.5rem;
+    top: 1.7rem;
+  }
+
+  #theme-icon {
+    margin-top: 1rem;
+  }
+
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  nav ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 0.25rem;
+  }
+
+  nav ul.open {
+    display: flex;
+  }
+
+  nav ul li {
+    width: 100%;
+  }
+
+  nav ul li a {
+    margin: 0.2rem 0.5rem;
+  }
+
+  .title {
+    text-align: left; /* Align title to the left on smaller screens */
+    width: 100%; /* Ensure title takes full width to align left */
+  }
+
+  .menu {
+    text-align: right;
+  }
 }
