--- a/src/sections/Resume/ProjectCard/ProjectsCard.css
+++ b/src/sections/Resume/ProjectCard/ProjectsCard.css
@@ -10,14 +10,13 @@
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  background: linear-gradient(to right, #181a1b, #202327);
+  background: var(--nav-color);
   transition: background 1s;
-  box-shadow: var(--secondary-color) 0px 0px 40px;
   border: 1px solid var(--secondary-color); /* Existing border */
 }
 
 .projects-card:hover {
-  background: linear-gradient(to bottom, #1a1a1a, #1a1a1a);
+  box-shadow: var(--secondary-color) 0px 0px 40px;
 }
 
 .projects-card-img-wrapper {
