--- a/src/sections/Contact/ContactStyles.css
+++ b/src/sections/Contact/ContactStyles.css
@@ -1,6 +1,6 @@
 #contact {
   padding: 0;
-  margin: 200px auto;
+  margin: 0 auto;
   margin-top: -1rem;
   display: flex;
   align-items: center;
@@ -8,13 +8,7 @@
   width: 75%;
   padding-top: 60px;
   padding-bottom: 50px;
-}
-
-.container,
-.row {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  text-align: center; /* Center text inside contact section */
 }
 
 .sub-title {
@@ -26,11 +20,10 @@
   margin-top: 0;
 }
 
-.contact-left {
-  flex-basis: 35%;
-  color: var(--text-color);
-  float: left;
-  margin-top: 0;
+.contact-left,
+.contact-right {
+  width: 100%;
+  margin-bottom: 50px; /* Add space between contact-left and contact-right */
 }
 
 .gmail p {
@@ -49,7 +42,6 @@
 
 .social-icon {
   text-decoration: none;
-  transition: 0.1s;
   font-size: 30px;
   margin-right: 15px;
   color: var(--text-color);
@@ -65,12 +57,7 @@
   border-radius: 10px;
   display: inline-block;
   color: white;
-}
-
-.contact-right {
-  flex-basis: 60%;
-  float: right;
-  margin-left: 150px;
+  margin-top: 5px; /* Add space between resume button and form */
 }
 
 .contact-right input,
