--- a/src/sections/Resume/ExperienceCard/ExperienceCard.css
+++ b/src/sections/Resume/ExperienceCard/ExperienceCard.css
@@ -10,14 +10,14 @@
   font-size: 1.05rem;
   font-weight: 500;
   margin-bottom: 0.7rem;
-  color: white;
+  color: var(--text-color);
 }
 
 .work-duration {
   display: inline-block;
   font-size: 0.7rem;
   font-weight: 400;
-  background: var(--secondary-color);
+  background: var(--button-color);
   border-radius: 0.3rem;
   padding: 0.4rem 0.6rem;
   margin-bottom: 1.3rem;
@@ -31,7 +31,7 @@
   margin-bottom: 0.5rem;
   margin-left: 1rem;
   position: relative;
-  color: white;
+  color: var(--text-color);
 }
 
 .work-experience-card ul li::after {
