--- a/src/sections/Resume/WorkExperience.css
+++ b/src/sections/Resume/WorkExperience.css
@@ -9,35 +9,9 @@
   margin-bottom: 3rem;
 }
 
-.arrow-left,
-.arrow-right {
-  width: 2.2rem;
-  height: 2.2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #6751b9;
-  border-radius: 0.65rem;
-  border: 1.5px solid #6751b9;
-  background: #130f2a;
-  position: absolute;
-  top: 55%;
-  z-index: 2;
-  cursor: pointer;
-}
-
-.arrow-left span,
-.arrow-right span {
-  font-size: 2rem;
-  font-weight: 500;
-}
-
-.arrow-left {
-  left: 0;
-}
-
-.arrow-right {
-  right: 0;
+.slick-prev,
+.slick-next {
+  color: var(--text-color);
 }
 
 @media (max-width: 768px) {
