--- a/src/sections/Navigation Bar/NavStyles.css
+++ b/src/sections/Navigation Bar/NavStyles.css
@@ -69,6 +69,7 @@ nav .menu span {
   width: %;
   background-color: var(--text-color);
   border-radius: 0.2rem;
+  cursor: pointer;
 }
 
 @media (min-width: 900px) {
