--- a/src/sections/About Me/AboutStyles.css
+++ b/src/sections/About Me/AboutStyles.css
@@ -1,3 +1,25 @@
+#about {
+  border: 2px solid var(--secondary-color);
+  background: var(--nav-color);
+  border-radius: 0.5rem;
+}
+
+@media (min-width: 768px) {
+  #about {
+    margin: 0 10rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #about {
+    margin: 0rem 2rem;
+    margin-top: 6rem;
+  }
+  .desc {
+    font-size: 4rem;
+  }
+}
+
 .information {
   margin: 0;
   padding: 0;
@@ -17,7 +39,7 @@
 
 .heading {
   margin: 0;
-  margin-top: -1rem;
+  margin-top: 0rem;
   margin-bottom: 2rem;
   color: var(--secondary-color);
   font-size: 2.5rem;
@@ -32,7 +54,7 @@
   color: var(--text-color);
   letter-spacing: 0.1rem;
   line-height: 1.6;
-  font-size: 1.25rem;
+  font-size: 1rem;
   max-width: 800px;
   width: 100%;
   padding: 0 1rem;
